--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
   <div class="container_12">
     <div class="grid_12">
       <h1 class="logo">
-
         <a href="index.html">Pro Dance<span>Escuela de baile</span>
         </a>
       </h1>
@@ -69,12 +68,13 @@
           <div class="navigation ">
             <nav>
               <ul class="sf-menu">
-               <li class="current"><span class="icon-home3"> <a href="index.html"> Inicio</a></span></li>
-               <li><span class="icon-address-book"> <a href="classes.html"> Clases</a></span></li>
-               <li><span class="icon-user-tie"><a href="staff.html"> Maestros</a></span></li>
-               <li><span class="icon-user"><a href="#"> Chambelanes</a></span></li>
-                <li><span class="icon-question"><a href="about.html"> Acerca de</a></span></li>
-               <li><span class="icon-phone"><a href="contacts.html"> Contacto</a></span></li>
+               <li class="current"> 
+                <a href="index.html"> <span class="icon-home3">  Inicio</span></a></li>
+               <li><a href="classes.html"><span class="icon-address-book">  Clases</span></a></li>
+               <li><a href="staff.html"><span class="icon-user-tie"> Maestros</span></a></li>
+               <li><a href="#"><span class="icon-user"> Chambelanes</span></a></li>
+                <li><a href="about.html"><span class="icon-question"> Acerca de</span></a></li>
+               <li><a href="contacts.html"><span class="icon-phone"> Contacto</span></a></li>
              </ul>
             </nav>
             <div class="clear"></div>
