--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,8 @@
 <link rel="shortcut icon" href="images/favicon.ico" />
 <link rel="stylesheet" href="css/contact-form.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="iconos/style.css" />
+
 <script src="js/jquery.js"></script>
 <script src="js/jquery-migrate-1.1.1.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
@@ -45,7 +47,7 @@
   <div class="container_12">
     <div class="grid_12">
       <h1 class="logo">
-        <a href="index.html">MOVE<span>your dance school</span>
+        <a href="index.html">Pro Dance<span>Escuela de baile</span>
         </a>
       </h1>
     </div>
@@ -60,11 +62,13 @@
           <div class="navigation ">
             <nav>
               <ul class="sf-menu">
-               <li><a href="index.html">Home</a></li>
-               <li><a href="about.html">About</a></li>
-               <li><a href="classes.html">Classes</a></li>
-               <li><a href="staff.html">Staff</a></li>
-               <li class="current"><a href="contacts.html">Contacts</a></li>
+               <li class="current"> 
+                <a href="index.html"> <span class="icon-home3">  Inicio</span></a></li>
+               <li><a href="classes.html"><span class="icon-address-book">  Clases</span></a></li>
+               <li><a href="staff.html"><span class="icon-user-tie"> Maestros</span></a></li>
+               <li><a href="#"><span class="icon-user"> Chambelanes</span></a></li>
+                <li><a href="about.html"><span class="icon-question"> Acerca de</span></a></li>
+               <li><a href="contacts.html"><span class="icon-phone"> Contacto</span></a></li>
              </ul>
             </nav>
             <div class="clear"></div>
@@ -84,7 +88,7 @@
       <h2 class="inset__1">Find Us</h2>
       <div class="map">
         <figure class="">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24214.807650104907!2d-73.94846048422478!3d40.65521573400813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1395650655094" style="border:0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1907.14891166376!2d-96.71705325295511!3d17.058078798257323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c7224889ee0cbd%3A0xa92fc0fac2b67e12!2sLeandro+Valle+910%2C+Zona+Feb+10+2015%2C+Obrera%2C+68115+Oaxaca%2C+Oax.!5e0!3m2!1ses-419!2smx!4v1522991826180" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </figure>
       </div>
     </div>
