--- a/classes.html
+++ b/classes.html
@@ -7,6 +7,7 @@
 <link rel="icon" href="images/favicon.ico">
 <link rel="shortcut icon" href="images/favicon.ico" />
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="iconos/style.css" />
 <script src="js/jquery.js"></script>
 <script src="js/jquery-migrate-1.1.1.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
@@ -42,7 +43,7 @@
   <div class="container_12">
     <div class="grid_12">
       <h1 class="logo">
-        <a href="index.html">MOVE<span>your dance school</span>
+        <a href="index.html">Pro Dance<span>Escuela de baile</span>
         </a>
       </h1>
     </div>
@@ -57,11 +58,13 @@
           <div class="navigation ">
             <nav>
               <ul class="sf-menu">
-               <li><a href="index.html">Home</a></li>
-               <li><a href="about.html">About</a></li>
-               <li class="current"><a href="classes.html">Classes</a></li>
-               <li><a href="staff.html">Staff</a></li>
-               <li><a href="contacts.html">Contacts</a></li>
+               <li class="current"> 
+                <a href="index.html"> <span class="icon-home3">  Inicio</span></a></li>
+               <li><a href="classes.html"><span class="icon-address-book">  Clases</span></a></li>
+               <li><a href="staff.html"><span class="icon-user-tie"> Maestros</span></a></li>
+               <li><a href="#"><span class="icon-user"> Chambelanes</span></a></li>
+                <li><a href="about.html"><span class="icon-question"> Acerca de</span></a></li>
+               <li><a href="contacts.html"><span class="icon-phone"> Contacto</span></a></li>
              </ul>
             </nav>
             <div class="clear"></div>
