--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <div class="container_12">
     <div class="grid_12">
       <h1 class="logo">
-        <a href="index.html">MOVE<span>your dance school</span>
+        <a href="index.html">Pro Dance<span>Escuela de baile</span>
         </a>
       </h1>
     </div>
